--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   	<title>Saheel Wed Jabeen</title>
-	<!-- Bootstrap -->
+	<link rel="shortcut icon" href="favicon.ico" />
+	
+	<!-- Bootstrap  -->
     <!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="https://daneden.github.io/animate.css/animate.min.css" />
