--- a/index.html
+++ b/index.html
@@ -147,10 +147,8 @@
 			var isSmall = window.innerWidth < 1000;
 			
 			if( window.screen.width <= 600 ){
-				var ps = new ParticleSlider({
-					width: 240,
-					height: 240,
-				});
+				var ps = new ParticleSlider();
+				ps.width = 240;
 				ps.$(".draw");
 			}else{
 				var ps = new ParticleSlider();
