--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 			
 			if( window.screen.width <= 600 ){
 				var ps = new ParticleSlider();
-				ps.width = 240;
+				ps.height = 100;
 				ps.$(".draw");
 			}else{
 				var ps = new ParticleSlider();
