--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 			var isSmall = window.innerWidth < 1000;
 			
 			if( window.screen.width <= 600 ){
-				$("#mobile-img").removeClass("hide").addClass("show");
+				$(".mobile-img").removeClass("hide").addClass("show");
 			}else{
 				var ps = new ParticleSlider();
 				ps.$(".draw");
