--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
 			top: -50px;
 		}
 		
+		.mobile-img{
+			padding-top: 2%;
+		}
+		
 		@media (min-width: 1000px) {
 			body {
 				background-size: cover;
